# global_minimization

./: .gitmodules  CMakeLists.txt  README.md
repos_3_min_by_grad_des-master/project/workdir/: CMakeLists.txt  build.sh  doxygen_config
repos_3_min_by_grad_des-master/project/workdir/doc/html/: AMSGrad_8h_source.html  AdaMax_8h_source.html  Adadelta_8h_source.html  Adagrad_8h_source.html  Adam_8h_source.html  ConfigActions_8h.html  ConfigActions_8h_source.html  Data_8h_source.html  Functions_8h_source.html  Lists_8h_source.html  Math_8h_source.html  Nadam_8h_source.html  Parameters_8h_source.html  RmsProp_8h_source.html  annotated.html  classes.html  dir_116dec591a4d97fd3669b430b8867ffb.html  dir_434bf685ef10b9139d2d8d07d0dc5138.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b90d73d79b67ccd72c2aaf78972ad885.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f757fd908aef964c55548e00ebc4a256.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  menudata.js  structAMSGrad.html  structAdaMax.html  structAdadelta.html  structAdagrad.html  structAdam.html  structFlist-members.html  structFlist.html  structIterationData-members.html  structIterationData.html  structMlist-members.html  structMlist.html  (+4 more)
repos_3_min_by_grad_des-master/project/workdir/doc/latex/: ConfigActions_8h.tex  annotated.tex  files.tex  refman.tex  structAMSGrad.tex  structAdaMax.tex  structAdadelta.tex  structAdagrad.tex  structAdam.tex  structFlist.tex  structIterationData.tex  structMlist.tex  structNadam.tex  structParameters.tex  structRmsProp.tex
repos_3_min_by_grad_des-master/project/workdir/include/Tools/: ConfigActions.h  Data.h  (+5 more)
repos_3_min_by_grad_des-master/project/workdir/test/: main.cpp
repos_3_min_by_grad_des-master/project/workdir/tmp/: Adam.cpp  Parameters.cpp
(+125 files in other folders)
